# Hot-Button-Camera

./: CHANGELOG.html  README.html  README.md
x64-windows/include/daq/: Board.h
x64-windows/programs/: CMakeLists.txt
x64-windows/programs/depends/src/SDL-stamp/: SDL-urlinfo.txt  download-SDL.cmake  extract-SDL.cmake
x64-windows/programs/depends/tmp/: SDL-mkdirs.cmake
x64-windows/programs/seekcamera-daq/: CMakeLists.txt
x64-windows/programs/seekcamera-daq/lib/: cbw64.lib
x64-windows/programs/seekcamera-daq/src/: seekcamera-daq.cpp
x64-windows/programs/seekcamera-simple/: CMakeLists.txt
x64-windows/programs/seekcamera-simple/src/: seekcamera-simple.cpp
